--- a/Visualizer/app/src/main/res/xml/pref_visualizer.xml
+++ b/Visualizer/app/src/main/res/xml/pref_visualizer.xml
@@ -8,4 +8,18 @@
         android:summaryOn="@string/pref_show_true"
         android:title="@string/pref_show_bass_label" />
 
+    <CheckBoxPreference
+        android:defaultValue="@bool/pref_show_mid_range_default"
+        android:key="@string/pref_show_mid_range_key"
+        android:summaryOff="@string/pref_show_false"
+        android:summaryOn="@string/pref_show_true"
+        android:title="@string/pref_show_mid_range_label" />
+
+    <CheckBoxPreference
+        android:defaultValue="@bool/pref_show_treble_default"
+        android:key="@string/pref_show_treble_key"
+        android:summaryOff="@string/pref_show_false"
+        android:summaryOn="@string/pref_show_true"
+        android:title="@string/pref_show_treble_label" />
+
 </PreferenceScreen>
