--- a/Visualizer/app/src/main/res/xml/pref_visualizer.xml
+++ b/Visualizer/app/src/main/res/xml/pref_visualizer.xml
@@ -22,4 +22,11 @@
         android:summaryOn="@string/pref_show_true"
         android:title="@string/pref_show_treble_label" />
 
+    <ListPreference
+        android:defaultValue="@string/pref_color_red_value"
+        android:entries="@array/pref_color_option_labels"
+        android:entryValues="@array/pref_color_option_values"
+        android:key="@string/pref_color_key"
+        android:title="@string/pref_color_label" />
+
 </PreferenceScreen>
